# Call-Me-Maybe

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  test_generator.py
data/input/: function_calling_tests.json  functions_definition.json
data/output/: function_calling_results.json
data__/output/: function_calling_results.json
src/: __main__.py  generator.py  io.py  models.py  prompt.py  visualizer.py
