[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "llm-sdk",
    "numpy>=2.4.4",
    "pydantic>=2.13.3",
]

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[tool.mypy]
exclude = [
    ".venv",
    "__pycache__",
    ".mypy_cache",
    "llm_sdk",
]

[[tool.mypy.overrides]]
module = "llm_sdk.*"
ignore_missing_imports = true
follow_imports = "skip"

[tool.uv.sources]
llm-sdk = { workspace = true, editable = true }
